# seedrandom

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: code_quality.yaml  commit_check.yaml  publish.yaml  pypi_publish.yaml  run_tests.yaml  tests.yaml
seedrandom/: __init__.py  rng.py
tests/: test.py  test1.py
