[tool.poetry]
name = "seedrandom"
version = "0.0.0"
description = "Proof-of-concept seeded RNG lib"
authors = ["BananaLoaf <bananaloaf@protonmail.com>"]
maintainers = ["BananaLoaf <bananaloaf@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/BananaLoaf/seedrandom"
repository = "https://github.com/BananaLoaf/seedrandom"
keywords = ["random", "seed", "seeded", "number", "generator", "hash", "int", "float", "bool", "bytes", "rng", "deterministic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
packages = [
    { include = "seedrandom" },
]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
isort = "^5.11.0"
black = "^22.0.0"


[tool.isort]
py_version = 37
profile = "black"
force_single_line = false
combine_as_imports = true
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 2
src_paths = ["seedrandom", "test"]

[tool.pytest.ini_options]
testpaths = [
    "tests/**/*.py",
]

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
